# request-verification-examples

./: README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
cplusplus/: CMakeLists.txt  README.md  main.cpp
csharp/: ContentfulWebhookVerification.csproj  ContentfulWebhookVerification.http  Program.cs  README.md  WebhookController.cs
csharp/Properties/: launchSettings.json
elixir/: README.md  mix.exs
elixir/lib/: request_verification.ex
elixir/lib/request_verification/: application.ex
go/: README.md  go.mod  main.go
java/: .gitignore  README.md  pom.xml
java/src/main/java/com/example/demo/: DemoApplication.java  RequestVerifier.java
kotlin/: README.md  build.gradle.kts
kotlin/src/main/kotlin/org/example/: Application.kt
php/: README.md  index.php
python/: README.md  app.py
ruby/: README.md  app.rb
rust/: Cargo.toml  README.md
rust/src/: main.rs
